add link to google calendar and northcoders notes

--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./stylesheet.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <h1>Useful Links</h1>
+      <h2>
+        <ul>
+          <li><a href="https://t.ly/foXXK">Google Calendar</a></li>
+          <li>
+            <a href="https://l2c.northcoders.com/courses/sd-notes"
+              >Northcoders Notes</a
+            >
+          </li>
+        </ul>
+      </h2>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
