add few useful links in a list

--- a/index.html
+++ b/index.html
@@ -20,7 +20,56 @@
         </ul>
       </h2>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <div class="left">
+        <ol>
+          <li>
+            <a href="https://developer.mozilla.org/en-US/" target="_blank">
+              MDN Web Docs</a
+            >
+            <p>
+              MDN Web Docs, previously Mozilla Developer Network and formerly
+              Mozilla Developer Center, is a documentation repository and
+              learning resource for web developers. It was started by Mozilla in
+              2005
+            </p>
+          </li>
+          <li>
+            <a href="https://www.w3schools.com/">W3schools</a>
+            <p>
+              W3Schools is a freemium educational website for learning coding
+              online.Initially released in 1998, it derives its name from the
+              World Wide Web. W3Schools offers courses covering many aspects of
+              web development.W3Schools also publishes free HTML templates.
+            </p>
+          </li>
+          <li>
+            <a href="https://regexr.com/">Regexr</a>
+            <p>
+              Regular expression tester with syntax highlighting, PHP / PCRE &
+              JS Support, contextual help, cheat sheet, reference, and
+              searchable community patterns.
+            </p>
+          </li>
+        </ol>
+      </div>
+      <div class="right">
+        <ol>
+          <li>
+            <a href="https://github.com/">Github</a>
+            <p>
+              GitHub is a developer platform that allows developers
+              to create, store, manage and share their code. It uses Git
+              software, providing the distributed version control of Git plus
+              access control, bug tracking, software feature requests, task
+              management, continuous integration, and wikis for every project.
+            </p>
+          </li>
+        </ol>
+      </div>
+    </main>
+    <footer>
+      <p>Made by Claudio at Northcoders</p>
+    </footer>
   </body>
 </html>
