add styling and logo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <header>
+      <div class="logo">
+          <img src="link.png" alt="Black and Orange chainlink logo" />
+      </div>
       <h1>Useful Links</h1>
       <h2>
         <ul>
@@ -40,7 +43,7 @@
               W3Schools is a freemium educational website for learning coding
               online.Initially released in 1998, it derives its name from the
               World Wide Web. W3Schools offers courses covering many aspects of
-              web development.W3Schools also publishes free HTML templates.
+              web development.
             </p>
           </li>
           <li>
@@ -58,18 +61,38 @@
           <li>
             <a href="https://github.com/">Github</a>
             <p>
-              GitHub is a developer platform that allows developers
-              to create, store, manage and share their code. It uses Git
-              software, providing the distributed version control of Git plus
-              access control, bug tracking, software feature requests, task
-              management, continuous integration, and wikis for every project.
+              GitHub is a developer platform that allows developers to create,
+              store, manage and share their code. It uses Git software,
+              providing the distributed version control of Git plus access
+              control, bug tracking, software feature requests, task management,
+              continuous integration, and wikis for every project.
+            </p>
+          </li>
+          <li>
+            <a href="https://www.codewars.com/">Codewars</a>
+            <p>
+              Codewars is an educational community for computer programming. On
+              the platform, software developers train on programming challenges
+              known as kata. These discrete programming exercises train a range
+              of skills in a variety of programming languages, and are completed
+              within an online integrated development environment.
+            </p>
+          </li>
+          <li>
+            <a href="https://stackoverflow.com/">Stack Overflow</a>
+            <p>
+              Stack Overflow is the largest, most trusted online community for
+              developers to learn, share their programming knowledge, and build
+              their careers.
             </p>
           </li>
         </ol>
       </div>
     </main>
     <footer>
-      <p>Made by Claudio at Northcoders</p>
+      <section class="pageFooter">
+        <p>Made by Claudio at Northcoders</p>
+      </section>
     </footer>
   </body>
 </html>
