add correct title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./stylesheet.css" />
-    <title>Document</title>
+    <title>Home</title>
   </head>
   <body>
     <header>
@@ -34,7 +34,7 @@
               MDN Web Docs, previously Mozilla Developer Network and formerly
               Mozilla Developer Center, is a documentation repository and
               learning resource for web developers. It was started by Mozilla in
-              2005
+              2005.
             </p>
           </li>
           <li>
