add border to lists div

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
               searchable community patterns.
             </p>
           </li>
+          <li>
+            <a href="https://github.com/pluja/awesome-privacy?tab=readme-ov-file">Awesome Privacy</a>
+            <p>List of free, open source and privacy respecting services and alternatives to privative services.</p>
+          </li>
         </ol>
       </div>
       <div class="right">
