add more contrast to the page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <div class="logo">
+      <div role="list of links" class="logo">
           <img src="link.png" alt="Black and Orange chainlink logo" />
       </div>
       <h1>Useful Links</h1>
@@ -24,7 +24,7 @@
       </h2>
     </header>
     <main>
-      <div class="left">
+      <div role="list of links" class="left">
         <ol>
           <li>
             <a href="https://developer.mozilla.org/en-US/" target="_blank">
