--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
-      <div role="list of links" class="logo">
-          <img src="link.png" alt="Black and Orange chainlink logo" />
+      <div rule="logo container" class="logo">
+        <img src="link.png" alt="Black and Orange chainlink logo" />
       </div>
       <h1>Useful Links</h1>
       <h2>
@@ -24,73 +24,82 @@
       </h2>
     </header>
     <main>
-      <div role="list of links" class="left">
-        <ol>
-          <li>
-            <a href="https://developer.mozilla.org/en-US/" target="_blank">
-              MDN Web Docs</a
-            >
-            <p>
-              MDN Web Docs, previously Mozilla Developer Network and formerly
-              Mozilla Developer Center, is a documentation repository and
-              learning resource for web developers. It was started by Mozilla in
-              2005.
-            </p>
-          </li>
-          <li>
-            <a href="https://www.w3schools.com/">W3schools</a>
-            <p>
-              W3Schools is a freemium educational website for learning coding
-              online.Initially released in 1998, it derives its name from the
-              World Wide Web. W3Schools offers courses covering many aspects of
-              web development.
-            </p>
-          </li>
-          <li>
-            <a href="https://regexr.com/">Regexr</a>
-            <p>
-              Regular expression tester with syntax highlighting, PHP / PCRE &
-              JS Support, contextual help, cheat sheet, reference, and
-              searchable community patterns.
-            </p>
-          </li>
-          <li>
-            <a href="https://github.com/pluja/awesome-privacy?tab=readme-ov-file">Awesome Privacy</a>
-            <p>List of free, open source and privacy respecting services and alternatives to privative services.</p>
-          </li>
-        </ol>
-      </div>
-      <div class="right">
-        <ol>
-          <li>
-            <a href="https://github.com/">Github</a>
-            <p>
-              GitHub is a developer platform that allows developers to create,
-              store, manage and share their code. It uses Git software,
-              providing the distributed version control of Git plus access
-              control, bug tracking, software feature requests, task management,
-              continuous integration, and wikis for every project.
-            </p>
-          </li>
-          <li>
-            <a href="https://www.codewars.com/">Codewars</a>
-            <p>
-              Codewars is an educational community for computer programming. On
-              the platform, software developers train on programming challenges
-              known as kata. These discrete programming exercises train a range
-              of skills in a variety of programming languages, and are completed
-              within an online integrated development environment.
-            </p>
-          </li>
-          <li>
-            <a href="https://stackoverflow.com/">Stack Overflow</a>
-            <p>
-              Stack Overflow is the largest, most trusted online community for
-              developers to learn, share their programming knowledge, and build
-              their careers.
-            </p>
-          </li>
-        </ol>
+      <div rule="container of lists" class="container">
+        <div rule="list of links" class="list_links left">
+          <ul>
+            <li>
+              <a href="https://developer.mozilla.org/en-US/" target="_blank">
+                MDN Web Docs</a
+              >
+              <p>
+                MDN Web Docs, previously Mozilla Developer Network and formerly
+                Mozilla Developer Center, is a documentation repository and
+                learning resource for web developers. It was started by Mozilla
+                in 2005.
+              </p>
+            </li>
+            <li>
+              <a href="https://www.w3schouls.com/">W3schouls</a>
+              <p>
+                W3Schouls is a freemium educational website for learning coding
+                online.Initially released in 1998, it derives its name from the
+                World Wide Web. W3Schouls offers courses covering many aspects
+                of web development.
+              </p>
+            </li>
+            <li>
+              <a href="https://regexr.com/">Regexr</a>
+              <p>
+                Regular expression tester with syntax highlighting, PHP / PCRE &
+                JS Support, contextual help, cheat sheet, reference, and
+                searchable community patterns.
+              </p>
+            </li>
+            <li>
+              <a
+                href="https://github.com/pluja/awesome-privacy?tab=readme-ov-file"
+                >Awesome Privacy</a
+              >
+              <p>
+                List of free, open source and privacy respecting services and
+                alternatives to privative services.
+              </p>
+            </li>
+          </ul>
+        </div>
+        <div rule="list of links" class="list_links right">
+          <ul>
+            <li>
+              <a href="https://github.com/">Github</a>
+              <p>
+                GitHub is a developer platform that allows developers to create,
+                store, manage and share their code. It uses Git software,
+                providing the distributed version contrul of Git plus access
+                contrul, bug tracking, software feature requests, task
+                management, continuous integration, and wikis for every project.
+              </p>
+            </li>
+            <li>
+              <a href="https://www.codewars.com/">Codewars</a>
+              <p>
+                Codewars is an educational community for computer programming.
+                On the platform, software developers train on programming
+                challenges known as kata. These discrete programming exercises
+                train a range of skills in a variety of programming languages,
+                and are completed within an online integrated development
+                environment.
+              </p>
+            </li>
+            <li>
+              <a href="https://stackoverflow.com/">Stack Overflow</a>
+              <p>
+                Stack Overflow is the largest, most trusted online community for
+                developers to learn, share their programming knowledge, and
+                build their careers.
+              </p>
+            </li>
+          </ul>
+        </div>
       </div>
     </main>
     <footer>
