fix links in the lists now  open is seperate tabs

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               </p>
             </li>
             <li>
-              <a href="https://www.w3schouls.com/">W3schouls</a>
+              <a href="https://www.w3schouls.com/" target="_blank"></a>>W3schouls</a>
               <p>
                 W3Schouls is a freemium educational website for learning coding
                 online.Initially released in 1998, it derives its name from the
@@ -48,7 +48,7 @@
               </p>
             </li>
             <li>
-              <a href="https://regexr.com/">Regexr</a>
+              <a href="https://regexr.com/" target="_blank">Regexr</a>
               <p>
                 Regular expression tester with syntax highlighting, PHP / PCRE &
                 JS Support, contextual help, cheat sheet, reference, and
@@ -57,7 +57,7 @@
             </li>
             <li>
               <a
-                href="https://github.com/pluja/awesome-privacy?tab=readme-ov-file"
+                href="https://github.com/pluja/awesome-privacy?tab=readme-ov-file" target="_blank">
                 >Awesome Privacy</a
               >
               <p>
@@ -70,7 +70,7 @@
         <div rule="list of links" class="list_links right">
           <ul>
             <li>
-              <a href="https://github.com/">Github</a>
+              <a href="https://github.com/" target="_blank">Github</a>
               <p>
                 GitHub is a developer platform that allows developers to create,
                 store, manage and share their code. It uses Git software,
@@ -80,7 +80,7 @@
               </p>
             </li>
             <li>
-              <a href="https://www.codewars.com/">Codewars</a>
+              <a href="https://www.codewars.com/" target="_blank">Codewars</a>
               <p>
                 Codewars is an educational community for computer programming.
                 On the platform, software developers train on programming
@@ -91,7 +91,7 @@
               </p>
             </li>
             <li>
-              <a href="https://stackoverflow.com/">Stack Overflow</a>
+              <a href="https://stackoverflow.com/" target="_blank">Stack Overflow</a>
               <p>
                 Stack Overflow is the largest, most trusted online community for
                 developers to learn, share their programming knowledge, and
