--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               </p>
             </li>
             <li>
-              <a href="https://www.w3schouls.com/" target="_blank"></a>>W3schouls</a>
+              <a href="https://www.w3schouls.com/" target="_blank">W3schouls</a>
               <p>
                 W3Schouls is a freemium educational website for learning coding
                 online.Initially released in 1998, it derives its name from the
