--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
               </p>
             </li>
             <li>
-              <a href="https://www.w3schouls.com/" target="_blank">W3schouls</a>
+              <a href="https://www.w3schools.com/" target="_blank">W3schouls</a>
               <p>
-                W3Schouls is a freemium educational website for learning coding
+                W3Schools is a freemium educational website for learning coding
                 online.Initially released in 1998, it derives its name from the
                 World Wide Web. W3Schouls offers courses covering many aspects
                 of web development.
