--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
               </p>
             </li>
             <li>
-              <a href="https://www.w3schools.com/" target="_blank">W3schouls</a>
+              <a href="https://www.w3schools.com/" target="_blank">W3schools</a>
               <p>
                 W3Schools is a freemium educational website for learning coding
                 online.Initially released in 1998, it derives its name from the
-                World Wide Web. W3Schouls offers courses covering many aspects
+                World Wide Web. W3Schools offers courses covering many aspects
                 of web development.
               </p>
             </li>
