fix even more typos

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <li>
               <a
                 href="https://github.com/pluja/awesome-privacy?tab=readme-ov-file" target="_blank">
-                >Awesome Privacy</a
+                Awesome Privacy</a
               >
               <p>
                 List of free, open source and privacy respecting services and
