add google calendar snippet

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
       <h1>Useful Links</h1>
       <h2>
         <ul>
-          <li><a href="https://t.ly/foXXK">Google Calendar</a></li>
+          <li>
+            <a href="https://t.ly/foXXK"> Google Calendar</a>
+          </li>
+          <iframe
+            class="calendar"
+            src="https://t.ly/6Vd5C"
+          ></iframe>
           <li>
             <a href="https://l2c.northcoders.com/courses/sd-notes"
               >Northcoders Notes</a
@@ -57,7 +63,9 @@
             </li>
             <li>
               <a
-                href="https://github.com/pluja/awesome-privacy?tab=readme-ov-file" target="_blank">
+                href="https://github.com/pluja/awesome-privacy?tab=readme-ov-file"
+                target="_blank"
+              >
                 Awesome Privacy</a
               >
               <p>
@@ -91,7 +99,9 @@
               </p>
             </li>
             <li>
-              <a href="https://stackoverflow.com/" target="_blank">Stack Overflow</a>
+              <a href="https://stackoverflow.com/" target="_blank"
+                >Stack Overflow</a
+              >
               <p>
                 Stack Overflow is the largest, most trusted online community for
                 developers to learn, share their programming knowledge, and
