--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./stylesheet.css" />
     <title>Home</title>
+    <link rel="icon" href="link.png" />
   </head>
   <body>
     <header>
+        <h1>
       <div rule="logo container" class="logo">
         <img src="link.png" alt="Black and Orange chainlink logo" />
       </div>
-      <h1>Useful Links</h1>
+      <div rule="title container" class="title">
+        <p class="title_text">LINKS</p>
+      </div>
+      </h1>
+
       <h2>
         <ul>
-          <li>
-            <a href="https://t.ly/foXXK"> Google Calendar</a>
-          </li>
-          <iframe
-            class="calendar"
-            src="https://t.ly/6Vd5C"
-          ></iframe>
+          <iframe class="calendar" src="https://t.ly/6Vd5C"></iframe>
           <li>
             <a href="https://l2c.northcoders.com/courses/sd-notes"
               >Northcoders Notes</a
@@ -28,6 +28,7 @@
           </li>
         </ul>
       </h2>
+      <h3>Useful Links</h3>
     </header>
     <main>
       <div rule="container of lists" class="container">
