add a caption to calendar

--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
   </head>
   <body>
     <header>
-        <h1>
-      <div rule="logo container" class="logo">
-        <img src="link.png" alt="Black and Orange chainlink logo" />
-      </div>
-      <div rule="title container" class="title">
-        <p class="title_text">LINKS</p>
-      </div>
+      <h1>
+        <div rule="logo container" class="logo">
+          <img src="link.png" alt="Black and Orange chainlink logo" />
+        </div>
+        <div rule="title container" class="title">
+          <p class="title_text">LINKS</p>
+        </div>
       </h1>
 
       <h2>
         <ul>
+          <li>Northcoders Calendar</li>
           <iframe class="calendar" src="https://t.ly/6Vd5C"></iframe>
           <li>
             <a href="https://l2c.northcoders.com/courses/sd-notes"
