refactor html tags

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <header>
       <h1>
-        <div rule="logo container" class="logo">
+        <header class="logo">
           <img src="link.png" alt="Black and Orange chainlink logo" />
-        </div>
-        <div rule="title container" class="title">
+        </header>
+        <header class="title">
           <p class="title_text">LINKS</p>
-        </div>
+        </header>
       </h1>
 
       <h2>
@@ -31,9 +31,9 @@
       </h2>
       <h3>Useful Links</h3>
     </header>
-    <main>
-      <div rule="container of lists" class="container">
-        <div rule="list of links" class="list_links left">
+    
+      <main class="container">
+        <section class="list_links left">
           <ul>
             <li>
               <a href="https://developer.mozilla.org/en-US/" target="_blank">
@@ -76,8 +76,8 @@
               </p>
             </li>
           </ul>
-        </div>
-        <div rule="list of links" class="list_links right">
+        </section>
+        <section class="list_links right">
           <ul>
             <li>
               <a href="https://github.com/" target="_blank">Github</a>
@@ -111,13 +111,10 @@
               </p>
             </li>
           </ul>
-        </div>
-      </div>
+        <section>
     </main>
-    <footer>
-      <section class="pageFooter">
-        <p>Made by Claudio at Northcoders</p>
-      </section>
+    <footer class="page_footer">
+        Made by Claudio at Northcoders
     </footer>
   </body>
 </html>
