add fix to some typos and accessibility issues with li

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
       </h1>
 
       <h2>
+        <iframe class="calendar" src="https://t.ly/6Vd5C" alt="Google calendar"></iframe>
         <ul>
-          <li>Northcoders Calendar</li>
-          <iframe class="calendar" src="https://t.ly/6Vd5C"></iframe>
           <li>
             <a href="https://l2c.northcoders.com/courses/sd-notes"
               >Northcoders Notes</a
@@ -84,8 +83,8 @@
               <p>
                 GitHub is a developer platform that allows developers to create,
                 store, manage and share their code. It uses Git software,
-                providing the distributed version contrul of Git plus access
-                contrul, bug tracking, software feature requests, task
+                providing the distributed version control of Git plus access
+                control, bug tracking, software feature requests, task
                 management, continuous integration, and wikis for every project.
               </p>
             </li>
